syntax = "proto3";

package patterns;

option go_package = "./api/grpc/patterns";

service Service {
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc Read(ReadRequest) returns (ReadResponse);
  rpc Delete(DeleteRequest) returns (DeleteResponse);
  rpc SearchMatchesBulk(SearchMatchesBulkRequest) returns (SearchMatchesBulkResponse);
}

message CreateRequest {
  string src = 1;
}

message CreateResponse {
  string err = 1;
  bytes code = 2;
}

message ReadRequest {
  bytes code = 1;
}

message ReadResponse {
  string err = 1;
  Pattern pattern = 2;
}

message DeleteRequest {
  bytes code = 1;
}

message DeleteResponse {
  string err = 1;
}

message SearchMatchesBulkRequest {
  map<string, string> md = 1;
  uint32 limit = 2;
  optional BulkCursor cursor = 3;
}

message SearchMatchesBulkResponse {
  string err = 1;
  map<string, Patterns> results = 2;
}

message Patterns {
  repeated Pattern values = 1;
}

message Pattern {
  bytes code = 1;
  string regex = 2;
  string src = 3;
}

message BulkCursor {
  string key = 1;
  bytes patternCode = 2;
}
